@@ -40,6 +40,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
+import static org.axonframework.messaging.QualifiedName.dottedName;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -95,8 +96,9 @@ class AnnotationCommandHandlerAdapterTest {
 
     @Test
     void handlerDispatchingWithCustomCommandName() throws Exception {
-        Object actualReturnValue = testSubject.handleSync(new GenericCommandMessage<>(new GenericMessage<>(1L),
-                                                                                      "almostLong"));
+        CommandMessage<Long> testCommand =
+                new GenericCommandMessage<>(new GenericMessage<>(dottedName("test.command"), 1L), "almostLong");
+        Object actualReturnValue = testSubject.handleSync(testCommand);
         assertEquals(1L, actualReturnValue);
         assertEquals(0, mockTarget.voidHandlerInvoked);
         assertEquals(0, mockTarget.returningHandlerInvoked);
@@ -115,7 +117,6 @@ class AnnotationCommandHandlerAdapterTest {
         fail("Shouldn't make it till here");
     }
 
-    @SuppressWarnings("resource")
     @Test
     void subscribe() {
         testSubject.subscribe(mockBus);
@@ -154,7 +155,7 @@ class AnnotationCommandHandlerAdapterTest {
 
     @Test
     @Disabled("TODO #3062 - Exception Handler support")
-    void exceptionHandlerAnnotatedMethodsAreSupportedForCommandHandlingComponents() throws Exception {
+    void exceptionHandlerAnnotatedMethodsAreSupportedForCommandHandlingComponents() {
         List<Exception> interceptedExceptions = new ArrayList<>();
         mockTarget = new MyInterceptingCommandHandler(new ArrayList<>(), new ArrayList<>(), interceptedExceptions);
         testSubject = new AnnotationCommandHandlerAdapter<>(mockTarget);
@@ -170,11 +171,12 @@ class AnnotationCommandHandlerAdapterTest {
 
         assertFalse(interceptedExceptions.isEmpty());
         assertEquals(1, interceptedExceptions.size());
-        Exception interceptedException = interceptedExceptions.get(0);
+        Exception interceptedException = interceptedExceptions.getFirst();
         assertInstanceOf(RuntimeException.class, interceptedException);
         assertEquals("Some exception", interceptedException.getMessage());
     }
 
+    @SuppressWarnings("unused")
     private static class MyCommandHandler {
 
         private int voidHandlerInvoked;
@@ -240,7 +242,7 @@ class AnnotationCommandHandlerAdapterTest {
             return chain.proceedSync();
         }
 
-        @ExceptionHandler(resultType = Exception.class)
+        @ExceptionHandler
         public void handle(Exception exception) {
             interceptedExceptions.add(exception);
         }
