@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2023. Axon Framework
+ * Copyright (c) 2010-2024. Axon Framework
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,21 +16,21 @@
 
 package org.axonframework.serialization.upcasting.event;
 
+import org.axonframework.eventhandling.DomainEventMessage;
 import org.axonframework.eventhandling.EventData;
 import org.axonframework.eventhandling.GenericDomainEventMessage;
 import org.axonframework.serialization.Converter;
 import org.axonframework.serialization.Serializer;
 import org.axonframework.serialization.TestSerializer;
 import org.axonframework.utils.TestDomainEventEntry;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.toList;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.axonframework.messaging.QualifiedName.dottedName;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 /**
@@ -44,9 +44,10 @@ class IntermediateRepresentationTest {
 
     @Test
     public void canConvertDataTo() {
-        EventData<?> eventData = new TestDomainEventEntry(
-            new GenericDomainEventMessage<>("test", "aggregateId", 0, "someString"), serializer
+        DomainEventMessage<String> testEvent = new GenericDomainEventMessage<>(
+                "test", "aggregateId", 0, dottedName("test.event"), "someString"
         );
+        EventData<?> eventData = new TestDomainEventEntry(testEvent, serializer);
         Serializer serializer = mock(Serializer.class);
         Converter converter = mock(Converter.class);
         when(serializer.getConverter()).thenReturn(converter);
@@ -54,14 +55,14 @@ class IntermediateRepresentationTest {
 
         IntermediateEventRepresentation input = new InitialEventRepresentation(eventData, serializer);
         EventUpcasterChain eventUpcasterChain = new EventUpcasterChain(
-            new IntermediateRepresentationTest.MyEventUpcaster()
+                new IntermediateRepresentationTest.MyEventUpcaster()
         );
-        List<IntermediateEventRepresentation> result = eventUpcasterChain.upcast(Stream.of(input)).collect(toList());
+        List<IntermediateEventRepresentation> result = eventUpcasterChain.upcast(Stream.of(input)).toList();
         assertEquals(1, result.size());
 
 
         assertTrue(input.canConvertDataTo(String.class));
-        assertTrue(result.get(0).canConvertDataTo(String.class));
+        assertTrue(result.getFirst().canConvertDataTo(String.class));
 
         verify(converter).canConvert(String.class, String.class);
     }
@@ -76,12 +77,12 @@ class IntermediateRepresentationTest {
         @Override
         protected IntermediateEventRepresentation doUpcast(IntermediateEventRepresentation intermediateRepresentation) {
             return new UpcastedEventRepresentation<>(
-                intermediateRepresentation.getType(),
-                intermediateRepresentation,
-                Function.identity(),
-                Function.identity(),
-                Object.class,
-                serializer.getConverter()
+                    intermediateRepresentation.getType(),
+                    intermediateRepresentation,
+                    Function.identity(),
+                    Function.identity(),
+                    Object.class,
+                    serializer.getConverter()
             );
         }
     }
